--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0"
+    "svelte": "^3.0.0",
+    "sass": "^1.49.0"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "rollup-plugin-postcss": "^4.0.2",
+    "sirv-cli": "^2.0.0",
+    "svelte-preprocess": "^4.10.3"
   }
 }
