--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "svelte-app",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
-    "start": "sirv dev --no-clear"
-  },
-  "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "rollup": "^2.3.4",
-    "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "sass": "^1.49.0"
-  },
-  "dependencies": {
-    "rollup-plugin-postcss": "^4.0.2",
-    "sirv-cli": "^2.0.0",
-    "svelte-preprocess": "^4.10.3"
-  }
+	"name": "svelte-app",
+	"version": "1.0.0",
+	"private": true,
+	"description": "",
+	"keywords": [],
+	"author": "",
+	"license": "MIT",
+	"main": "src/index.js",
+	"module": "dist/index.mjs",
+	"svelte": "src/index.js",
+	"scripts": {
+    "build": "npx rollup -c",
+    "dev": "rollup -c dev.rollup.config.js -w",
+		"start": "sirv dev --no-clear"
+	},
+	"devDependencies": {
+		"@rollup/plugin-commonjs": "^17.0.0",
+		"@rollup/plugin-node-resolve": "^11.0.0",
+		"rollup": "^2.3.4",
+		"rollup-plugin-css-only": "^3.1.0",
+		"rollup-plugin-livereload": "^2.0.0",
+		"rollup-plugin-svelte": "^7.0.0",
+		"rollup-plugin-terser": "^7.0.0",
+		"svelte": "^3.0.0",
+		"sass": "^1.49.0",
+		"rollup-plugin-postcss": "^4.0.2",
+		"sirv-cli": "^2.0.0",
+		"svelte-preprocess": "^4.10.3"
+	},
+	"dependencies": {}
 }
