--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
 		"rollup-plugin-terser": "^7.0.0",
 		"svelte": "^3.0.0",
 		"rollup-plugin-postcss": "^4.0.2",
+		"sass": "^1.49.0",
 		"sirv-cli": "^2.0.0",
 		"svelte-preprocess": "^4.10.3"
 	},
 	"dependencies": {
-		"rollup-plugin-postcss": "^4.0.2",
-		"sass": "^1.49.0"
+
 	}
 }
