--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "svelte-app",
+	"name": "svelte-otp",
 	"version": "1.0.0",
 	"private": true,
-	"description": "",
-	"keywords": [],
-	"author": "",
+	"description": "customizable one time password input for svelte ",
+	"keywords": ["svelte","otp","svelte-otp"],
+	"author": "zelvaman",
 	"license": "MIT",
 	"main": "src/index.js",
 	"module": "dist/index.mjs",
